--- a/Section 7: The World of CSS Selectors/Part 1/style.css
+++ b/Section 7: The World of CSS Selectors/Part 1/style.css
@@ -4,6 +4,10 @@ html {
 
 }
 
+::selection {
+    background-color: #2b2d42;
+}
+
 h1,
 h2,
 h3 {
@@ -59,6 +63,10 @@ label {
     width: 100%;
     margin: 0;
     text-align: left;
+}
+
+#rr button:hover {
+    color: aliceblue;
 }
 
 #rv {
