--- a/Section 8: The CSS Box Model/style.css
+++ b/Section 8: The CSS Box Model/style.css
@@ -24,7 +24,8 @@ p {
 
 .lorem {
     background-color: #cfe0c3;
-    border: 4px solid #40798c;
+    border-style: solid;
+    border-color: #40798c;
     box-sizing: border-box;
 
 }
@@ -32,14 +33,16 @@ p {
 .ipsum {
 
     background-color: #9ec1a3;
-    border: 4px solid #40798c;
+    border-style: solid;
+    border-color: #40798c;
     box-sizing: border-box;
 
 }
 
 .dolor {
     background-color: #70a9a1;
-    border: 4px solid #40798c;
+    border-style: solid;
+    border-color: #40798c;
     box-sizing: border-box;
 
 }
@@ -75,6 +78,7 @@ li {
     width: 253px;
     height: 160px;
     margin: 0px;
+    margin-right: -4px;
 
 }
 
@@ -86,19 +90,12 @@ ul .lorem {
 
 ul .ipsum {
     border-right: 2px;
-    margin-right: -4px;
 
 
-}
-
-div .lorem {
-    border-right-width: 2px;
 
 }
 
-div .ipsum {
-    border-right: 2px;
-}
+
 
 div {
     display: inline-block;
@@ -106,5 +103,13 @@ div {
     width: 253px;
     height: 160px;
     margin-right: -4px;
-    margin-top: 5px;
+}
+
+div.lorem {
+    border-right-width: 0px;
+
+}
+
+div.ipsum {
+    border-right: 0px;
 }
