--- a/Section 9: Other Assorted Useful CSS Properties/style.css
+++ b/Section 9: Other Assorted Useful CSS Properties/style.css
@@ -1,1 +1,12 @@
 
+section {
+    width: 500px;
+    height: 500px;
+    background-color: blue;
+}
+
+#rgba {
+    width: 50%;
+    height: 50%;
+    background-color: rgba(255, 255, 255, .5);
+}
