--- a/Section 9: Other Assorted Useful CSS Properties/Opacity/style.css
+++ b/Section 9: Other Assorted Useful CSS Properties/Opacity/style.css
@@ -1,5 +1,3 @@
-
-section {
     width: 500px;
     height: 500px;
     background-color: blue;
@@ -9,4 +7,11 @@ section {
     width: 50%;
     height: 50%;
     background-color: rgba(255, 255, 255, .5);
+}
+
+#opacity {
+    width: 50%;
+    height: 50%;
+    background-color: rgb(4, 248, 57);
+    opacity: .5;
 }
