--- a/Section 9: Other Assorted Useful CSS Properties/PhotoBlog/style.css
+++ b/Section 9: Other Assorted Useful CSS Properties/PhotoBlog/style.css
@@ -1,1 +1,17 @@
 
+img {
+    width: 30%;
+    margin: calc(10%/6);
+}
+
+nav {
+    font-family: 'Assistant', sans-serif;
+    font-family: 'Yantramanav', sans-serif;
+    font-size: 2em;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-bottom: 2px solid #4e05fa;
+    width: 31.5%;
+    margin-left: 10%/6;
+    padding: 1.2em 0;
+}
