--- a/Section 10: Responsive CSS & Flexbox/style.css
+++ b/Section 10: Responsive CSS & Flexbox/style.css
@@ -13,9 +13,13 @@ h1 {
     margin: 0 auto;
     border: 5px solid #003049;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #container div {
     width: 200px;
     height: 200px;
+    text-align: center;
 }
