--- a/Section 10: Responsive CSS & Flexbox/style.css
+++ b/Section 10: Responsive CSS & Flexbox/style.css
@@ -13,13 +13,22 @@ h1 {
     margin: 0 auto;
     border: 5px solid #003049;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 #container div {
     width: 200px;
     height: 200px;
     text-align: center;
+}
+
+div:nth-of-type(3) {
+    align-self: center;
+}
+
+div:nth-of-type(2) {
+    align-self: flex-end;
 }
